增加交互事件
增加了双击，长按，和滑动事件，还在更新

--- a/touch.html
+++ b/touch.html
@@ -20,14 +20,16 @@
     </style>
 </head>
 <body>
-    <div id="div"></div>
+    <div id="div">
+        <div style="width:400px; height:200px; background: red; margin:0 auto;"></div>
+    </div>
 </body>
 <script src="myNeedExtend.js"></script>
 <script>
     var myExtend = new MyNeedExtend();
     var dom = myExtend.touch(document.getElementById("div"));
-    console.log(dom.click(function () {
-        alert();
-    }));
+    dom.on("swipe",function () {
+        alert("1");
+    });
 </script>
 </html>
