更新方向事件
增加左滑动，右滑动，上滑动，下滑动事件

--- a/touch.html
+++ b/touch.html
@@ -28,8 +28,29 @@
 <script>
     var myExtend = new MyNeedExtend();
     var dom = myExtend.touch(document.getElementById("div"));
+    dom.on("tap",function () {
+        console.log("tap");
+    });
+    dom.on("doubleTap",function () {
+        console.log("doubleTap");
+    });
     dom.on("swipe",function () {
-        alert("1");
+        console.log("swipe");
+    });
+    dom.on("longTap",function () {
+        console.log("longTap");
+    });
+    dom.on("swipeLeft",function () {
+        console.log("swipeLeft");
+    });
+    dom.on("swipeRight",function () {
+        console.log("swipeRight");
+    });
+    dom.on("swipeUp",function () {
+        console.log("swipeUp");
+    });
+    dom.on("swipeDown",function () {
+        console.log("swipeDown");
     });
 </script>
 </html>
