--- a/touch.html
+++ b/touch.html
@@ -26,10 +26,14 @@
 </body>
 <script src="myNeedExtend.js"></script>
 <script>
-    var myExtend = new MyNeedExtend();
-    var dom = myExtend.touch(document.getElementById("div"));
+    var myExtend = new MyNeedExtend();//首先实例化对象，获取到对象
+    var dom = myExtend.touch(document.getElementById("div"));//通过获取到相关dom的对象
+    //以下是案例，兼容ie9以上
     dom.on("tap",function () {
         console.log("tap");
+    });
+    dom.on("singleTap",function () {
+        console.log("singleTap");
     });
     dom.on("doubleTap",function () {
         console.log("doubleTap");
