增加鼠标滚动事件
兼容pc端鼠标滚动事件，案例：
dom.on("wheel",function () {
        console.log("向下滚动");
    },function () {
        console.log("向上滚动");
    })

--- a/touch.html
+++ b/touch.html
@@ -56,5 +56,10 @@
     dom.on("swipeDown",function () {
         console.log("swipeDown");
     });
+    dom.on("wheel",function () {
+        console.log("向下滚动");
+    },function () {
+        console.log("向上滚动");
+    })
 </script>
 </html>
